Backport Fabric mod to 1.20.1